examples/datalog/32_math/20_trigonometry_full.dl
% Test: Full trigonometry suite
% Expected: All trig functions work
% Category: 32_math
% Priority: P2 - Math functions

.kg create test_trig_full
.kg use test_trig_full

+angles[(0.0,), (1.0,), (1.5707963,)].

sin_val(A, S) :- angles(A), S = SIN(A).
cos_val(A, C) :- angles(A), C = COS(A).

?- sin_val(A, S).
?- cos_val(A, C).

.kg use default
.kg drop test_trig_full
